  assignment:

    a, b = raise rescue [1, 2]
    # Previously parsed as: (a, b = raise) rescue [1, 2]
    # Now parsed as:         a, b = (raise rescue [1, 2])

* Method reference operator, <code>.:</code> is introduced as an
  experimental feature.  [Feature #12125] [Feature #13581]

* +yield+ in singleton class syntax is warned and will be deprecated later [Feature #15575].

=== Core classes updates (outstanding ones only)

Array::

  New method::

    * Added Array#intersection. [Feature #16155]

Comparable::

  Modified method::

    * Comparable#clamp now accepts a Range argument. [Feature #14784]

        -1.clamp(0..2) #=> 0
         1.clamp(0..2) #=> 1
         3.clamp(0..2) #=> 2

Complex::

  New method::

    * Added Complex#<=>. So 0 <=> 0i will not raise NoMethodError. [Bug #15857]

Dir::

  Modified method::

    * Dir.glob and Dir.[] no longer allow NUL-separated glob pattern.
      Use Array instead.  [Feature #14643]

Encoding::

  New method::

    * Added new encoding CESU-8 [Feature #15931]

Enumerable::

  New methods::

    * Added Enumerable#filter_map.  [Feature #15323]

        [1, 2, 3].filter_map {|x| x.odd? ? x.to_s : nil } #=> ["1", "3"]

    * Added Enumerable#tally.  [Feature #11076]

        ["A", "B", "C", "B", "A"].tally #=> {"A"=>2, "B"=>2, "C"=>1}

Enumerator::

  New method::

    * Added Enumerator::Lazy#eager that generates a non-lazy enumerator
      from a lazy enumerator.  [Feature #15901]

    * Added Enumerator::Yielder#to_proc so that a Yielder object
      can be directly passed to another method as a block
      argument.  [Feature #15618]

Fiber::

  New method::

    * Added Fiber#raise that behaves like Fiber#resume but raises an
      exception on the resumed fiber.  [Feature #10344]

File::

  Modified method::

    * File.extname now returns a dot string at a name ending with a dot on
      non-Windows platforms.  [Bug #15267]

          File.extname("foo.") #=> "."

FrozenError::

  New method::
